--- a/templates/base.html
+++ b/templates/base.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo App</title>
+    <title>Todo App with Flask for Superloop</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+    
 </head>
 
 <body>
     <div style="margin-top: 50px;" class="ui container">
-        <h1 class="ui center aligned header">To Do App</h1>
+        <h1 class="ui center aligned header">To Do App with Flask for Superloop</h1>
 
         <form class="ui form" action="/add" method="post">
             <div class="field">
@@ -39,6 +40,7 @@
         </div>
         {% endfor %}
     </div>
+    
 </body>
 
 </html>
